--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vuedraggable": "^2.21.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "ws": "^7.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
