- remove refresh on block state save, leave it to gulp - fix array titles so they can include html - use parent label to guess array item tityles from singularised label name - add folder icon for array labels - simple depth hihglighting on blocks - trip icons for block properties and increase label margin to space out a little - fix block paths - choose the first page context when current page isn't a preview page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "inflector-js": "^1.0.1",
     "socket.io-p2p": "^2.2.0",
     "vue": "^2.6.10",
     "vuedraggable": "^2.21.0",
