--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "gently-copy": "^3.2.0"
   },
   "devDependencies": {
-    "core-js": "^2.6.5",
-    "inflector-js": "^1.0.1",
-    "socket.io-p2p": "^2.2.0",
-    "vue": "^2.6.10",
-    "vuedraggable": "^2.21.0",
-    "vuex": "^3.0.1",
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.1",
+    "core-js": "^2.6.5",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "inflector-js": "^1.0.1",
     "lodash": "^4.17.11",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "socket.io-p2p": "^2.2.0",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10",
+    "vuedraggable": "^2.21.0",
+    "vuex": "^3.0.1"
   }
 }
